<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/icons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/running"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="90dp"
                android:layout_weight="1"
                android:src="@drawable/run" />

            <ImageView
                android:id="@+id/time"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/stopwatch" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/today_running"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/today_km"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigLeft"
                android:layout_weight="1"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/km"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km" />

            <TextView
                android:id="@+id/today"
                style="@style/TextViewSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigLeft"
                android:layout_marginRight="@dimen/bigMargin"
                android:layout_weight="1"
                android:text="@string/today" />

            <TextView
                android:id="@+id/today_min"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/min"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/total_running"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin"
            android:layout_marginLeft="@dimen/marginLeft"
            android:layout_marginRight="@dimen/margin"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/total_km"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigLeft"
                android:layout_weight="1"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/km2"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/km" />

            <TextView
                android:id="@+id/total"
                style="@style/TextViewSmall"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/bigLeft"
                android:layout_marginRight="@dimen/bigMargin"
                android:layout_weight="1"
                android:text="@string/total" />

            <TextView
                android:id="@+id/total_min"
                style="@style/TextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/margin"
                android:layout_weight="1"
                android:text="@string/zero" />

            <TextView
                android:id="@+id/min2"
                style="@style/TextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/min" />
        </LinearLayout>

        <ImageView
            android:id="@+id/trophy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/marginLeft"
            android:src="@drawable/trophy" />

        <TextView
            android:id="@+id/progress_text"
            style="@style/TextViewSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/goal" />

        <TextView
            android:id="@+id/goal_progress"
            style="@style/TextViewBig"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/hundert" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/margin"
            android:layout_marginRight="@dimen/margin"
            android:layout_marginTop="@dimen/margin"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/five_km"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginLeft"
                    android:layout_marginLeft="@dimen/bigLeft"
                    android:layout_marginRight="@dimen/bigLeft"
                    android:onClick="onSubmit"
                    android:text="@string/button_km" />

                <Button
                    android:id="@+id/ten_km"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginLeft"
                    android:layout_marginLeft="@dimen/bigLeft"
                    android:layout_marginRight="@dimen/bigLeft"
                    android:onClick="onSubmit"
                    android:text="@string/button_km2" />

                <Button
                    android:id="@+id/twenty_km"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginLeft"
                    android:layout_marginLeft="@dimen/bigLeft"
                    android:layout_marginRight="@dimen/bigLeft"
                    android:onClick="onSubmit"
                    android:text="@string/button_km3" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <Button
                    android:id="@+id/five_min"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginLeft"
                    android:layout_marginLeft="@dimen/bigLeft"
                    android:layout_marginRight="@dimen/bigLeft"
                    android:onClick="onSubmit"
                    android:text="@string/button_min" />

                <Button
                    android:id="@+id/ten_min"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginLeft"
                    android:layout_marginLeft="@dimen/bigLeft"
                    android:layout_marginRight="@dimen/bigLeft"
                    android:onClick="onSubmit"
                    android:text="@string/button_min2" />

                <Button
                    android:id="@+id/thirty_min"
                    style="@style/Button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/marginLeft"
                    android:layout_marginLeft="@dimen/bigLeft"
                    android:layout_marginRight="@dimen/bigLeft"
                    android:onClick="onSubmit"
                    android:text="@string/button_min3" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/reset_all"
            style="@style/Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/marginLeft"
            android:layout_marginLeft="@dimen/bigLeft"
            android:layout_marginRight="@dimen/bigLeft"
            android:onClick="onSubmit"
            android:text="@string/button_reset_all" />
    </LinearLayout>
</ScrollView>